# KDM6AD

./: .gitignore  .graphifyignore  AGENTS.md  BUGREPORT_module_bc_flow_dep_bdy_qnn.md  CITATION.cff  ENVIRONMENT.md  FORTRAN_FLOW_ORDER_CHECKLIST.md  README.md  STAGE_A_REARCH_BLUEPRINT.md  build_kdm6_ad_pptx.py  kdm6ad+da.md  model-side-rttov-observation-operator.md
.github/workflows/: ci.yml  g33-harness-ci.yml  oracle-ci.yml  pr1a-macos26-smoke.yml
KIM-meso_v1.0/: README.pjh21  Registry_tmp.90152  aux4  configure.wrf  configure.wrf+1  configure.wrf---  configure.wrf-20250114  configure.wrf-21  configure.wrf-guess  configure.wrf-super  configure.wrf.backup  configure.wrf.backup2  set_env.sh
KIM-meso_v1.0/Registry/: Registry.EM  Registry.EM_COMMON  Registry.EM_COMMON_20250818  Registry.backup
KIM-meso_v1.0/chem/: module_chem_utilities.f90
KIM-meso_v1.0/doc/: README.io_config
KIM-meso_v1.0/dyn_em/: adapt_timestep_em.f90  couple_or_uncouple_em.f90  interp_domain_em.f90  module_advect_em.f90  module_after_all_rk_steps.f90  module_bc_em.f90  module_big_step_utilities_em.f90  module_diffusion_em.f90  module_em.f90  module_first_rk_step_part1.F  module_first_rk_step_part1.F_20250818  module_first_rk_step_part1.f90  module_first_rk_step_part2.f90  module_ieva_em.f90  module_initialize_ideal.F  module_initialize_ideal.f90  module_initialize_real.F  module_polarfft.f90  module_sfs_driver.f90  module_small_step_em.f90  module_stoch.f90  module_wps_io_arw.F  module_wps_io_arw.f90  nest_init_utils.f90  shift_domain_em.f90  solve_em.F  solve_em.f90  start_em.F  start_em.F_20250818  start_em.f90
KIM-meso_v1.0/frame/: libmassv.f90  module_alloc_space_0.f90  module_alloc_space_1.f90  module_alloc_space_2.f90  module_alloc_space_3.f90  module_alloc_space_4.f90  module_alloc_space_5.f90  module_alloc_space_6.f90  (+46 more)
docs/: C4_G3_3_FIRST_DIVERGENCE.md  C4_G3_3_OP_PROVENANCE_PROTOCOL.md  DA_REALTIME_PLAN.md  FREEZE_LIFT_CONSERVATIVE_INTERFACE_V1.md  HOST_INTEGRATION.md  HOST_RUN_LAYOUT.md  KDM6AD_20260610_presentation_report.docx  KDM6AD_20260610_research_report_literature_math.docx  KDM6AD_20260610_research_report_literature_math.hwpx  KDM6AD_20260610_research_report_literature_math_equation_editable.hwpx  KDM6AD_differentiable_mathematics.humanized.md  KDM6AD_differentiable_mathematics.md  P0-4_water_budget.md  P0-4b1_interface_sink_prevalence.md  P0-4b_sedimentation_attribution.md  PR1B_OPENMP_DIAGNOSTIC.md  PR2_ABI_V2_DESIGN.md  PR3_VISIBILITY_DESIGN.md  RELEASE_ABI_V2_HARDENED.md  STATUS.md  c4_evidence_manifest.json
harness/: AGENTS.md  build_c4_evidence.py  check_cons_fortran_scope.py  compare_rate_dump.py  compare_step1_kdm6_bitwise.py  compare_step1_kdm6_vs_kdm6ad.py  compare_substep_stage.py  cons_fortran_scope_manifest.json  g33_abc_noninvasiveness.py  g33_bundle_io.py  g33_derived.py  g33_dump.py  g33_evidence_validate.py  g33_expectation.py  g33_fixture_v1.json  g33_fixture_v1.py  g33_fourcase_comparator.py  g33_fourcase_fixture_check.py  g33_mechanism.py  g33_normalize.py  g33_run_env.py  g33_schema.py  g33_selfcheck.py  g33_surface_selfcheck.py  gateb_g3_check.py  run_ss_case.py  strict_bitwise_nc.py
kdm6_libtorch/: CMakeLists.txt  README.md
kdm6_libtorch/bridge/: kdm6_c_api.cpp  kdm6_c_api.h  kdm6_fortran_iso.F90  kdm6_iso_c.f90
kdm6_libtorch/build_miniforge/: CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt  test_c_abi  test_cloud_dsd  test_cold  test_coordinator  test_fortran_smoke  test_melt_freeze  test_progb  test_satadj  test_sedimentation  test_slope  test_smoke  test_thermo  test_warm
kdm6_libtorch/build_miniforge/Testing/Temporary/: CTestCostData.txt
kdm6_libtorch/docs/: KIM_MESO_INTEGRATION.md  KIM_MESO_KDM6AD_DETAILED_PLAN.md
kdm6_libtorch/include/kdm6/: cloud_dsd.h  cold.h  constants.h  coordinator.h  fconst.h  melt_freeze.h  ops.h  progb.h  runtime.h  satadj.h  sedimentation.h  slope.h  state.h  thermo.h  warm.h
kdm6_libtorch/install_miniforge/include/kdm6/: cloud_dsd.h  cold.h  coordinator.h  melt_freeze.h  ops.h  runtime.h  satadj.h  sedimentation.h  state.h  thermo.h  warm.h
kdm6_libtorch/src/: cloud_dsd.cpp  cold.cpp  coordinator.cpp  melt_freeze.cpp  ops.cpp  progb.cpp  runtime.cpp  satadj.cpp  sedimentation.cpp  slope.cpp  state.cpp  thermo.cpp  warm.cpp
kdm6_libtorch/tests/: test_autograd_endtoend.cpp  test_aux_placeholder_gap.cpp  test_c_abi.cpp  test_cloud_dsd.cpp  test_cold.cpp  test_coordinator.cpp  test_fortran_smoke.f90  test_melt_freeze.cpp  test_progb.cpp  test_satadj.cpp  test_sedimentation.cpp  test_slope.cpp  test_smoke.cpp  test_thermo.cpp  test_warm.cpp
kdm6_libtorch/tools/: kdm6_parity.py
kdm6_torch/: README.md
libtorch/: AGENTS.md  CMakeLists.txt
libtorch/bridge/: kdm6_c.exports  kdm6_c.map  kdm6_c_api.cpp  kdm6_c_api.h  kdm6_iso_c.f90
libtorch/include/kdm6/: cloud_dsd.h  cold.h  coordinator.h  melt_freeze.h  progb.h  runtime.h  sedimentation.h  sedimentation_conservative.h  slope.h  thermo.h
libtorch/src/: cloud_dsd.cpp  cold.cpp  coordinator.cpp  melt_freeze.cpp  progb.cpp  runtime.cpp  sedimentation.cpp  sedimentation_conservative.cpp  slope.cpp  warm.cpp
libtorch/tests/: check_c_abi_exports.py  check_kmp_duplicate_env.py  dump_conservative_interface.cpp  legacy_signature_caller.cpp  legacy_signature_caller.h  test_autograd_endtoend.cpp  test_aux_placeholder_gap.cpp  test_c_abi.cpp  test_cloud_dsd.cpp  test_cold.cpp  test_conservative_interface.cpp  test_coordinator.cpp  test_fortran_smoke.f90  test_handle_vjp.cpp  test_melt_freeze.cpp  test_progb.cpp  test_satadj.cpp  test_sedimentation.cpp  test_slope.cpp  test_smoke.cpp  test_thermo.cpp  test_warm.cpp
oracle/: 0  AGENTS.md  README.md  conftest.py
parity/: README.md  _schema.py  build_self_test_vector.py  import_fortran.py  run_parity.py  symbol_parity.py  test_kdm6_fortran_contract.py  test_kdm6ad_driver_diagnostics.py  test_kdm6ad_registry_configure.py  test_kdm6ad_wrapper_contract.py  test_parity.py
tools/: build_rttov_runtime.sh
wiki/: graph-report.md  hot.md  index.md  kdm6ad-da-extension.canvas  log.md  overview.md
(+650 files in other folders)
